[gd_scene load_steps=5 format=3 uid="uid://ii15nq165n41"]

[ext_resource type="Script" path="res://scripts/question.gd" id="1_51d2h"]
[ext_resource type="StyleBox" uid="uid://bsjww8c7htevv" path="res://QuestionButtonDefault.tres" id="1_t5tcm"]

[sub_resource type="Theme" id="Theme_yrvmi"]
Button/styles/disabled = ExtResource("1_t5tcm")
Button/styles/normal = ExtResource("1_t5tcm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am07i"]
bg_color = Color(0.747113, 0.574032, 0.251357, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Question" type="Panel"]
visible = false
offset_left = 13.0
offset_top = 13.0
offset_right = 627.0
offset_bottom = 197.0
grow_horizontal = 2
script = ExtResource("1_51d2h")

[node name="QuestionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -290.0
offset_top = 13.0
offset_right = 275.0
offset_bottom = 81.0
grow_horizontal = 2
text = "Question placeholder text. There will be a question here?"
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 79.0
offset_right = 601.0
offset_bottom = 184.0
theme_override_constants/separation = 8
alignment = 1

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Answer1" type="Button" parent="VBoxContainer/Row1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yrvmi")
text = "TESTING 1, 2, 3 4 5"

[node name="Answer2" type="Button" parent="VBoxContainer/Row1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yrvmi")
text = "TESTING 1, 2, 3 4 5"

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Answer3" type="Button" parent="VBoxContainer/Row2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yrvmi")
text = "TESTING 1, 2, 3 4 5"

[node name="Answer4" type="Button" parent="VBoxContainer/Row2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yrvmi")
text = "TESTING 1, 2, 3 4 5"

[node name="Hint" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 585.0
offset_top = 6.0
offset_right = 608.0
offset_bottom = 29.0
tooltip_text = "Test Tool tip info?"
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.615686)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_am07i")
text = "?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
